crates/biome_js_parser/tests/js_test_suite/error/ts_declare_using.ts
declare using x: null
declare await using x: null
